Updated forms, modal and added footer

--- a/hackathon/app/templates/app/landing.html
+++ b/hackathon/app/templates/app/landing.html
@@ -69,7 +69,7 @@
 									<img src="../../static/app/imgs/TataMotorsLogoWhite.png" style="margin-right: 25px;">
 								</div>
 							</div>	
-							<a href="" class="registerBtn">Register Now</a>
+							<a href="registration.html" class="registerBtn">Register Now</a>
 						</div>
 
 					</div>
@@ -143,7 +143,7 @@
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
 						<div class="card custom-card" style="height: 400px">
 						  <div class="card-body">
-						  	<img src="../../static/app/imgs/TataLogo.svg" id="organizerImage">
+						  	<img src="../../static/app/imgs/TataLogo.png" id="organizerImage">
 						    <p class="card-text" id="card-text-info">India's only value based corporation — a visionary, a pioneer, a leader, since 1868. Scroll below to learn more about us.</p>
 						  </div>
 						</div>
@@ -151,7 +151,7 @@
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
 						<div class="card custom-card" style="height: 400px">
 						  <div class="card-body">
-						  	<img src="../../static/app/imgs/TataMotorsLogo.svg" id="organizerImage">
+						  	<img src="../../static/app/imgs/TataMotorsLogo.png" id="organizerImage">
 						    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. </p>
 						  </div>
 						</div>
@@ -172,7 +172,7 @@
 						<img src="../../static/app/imgs/teamwork.svg" id="eligibilityImage">
 						<h4 id="participateTitle">Individuals</h4>
 						<p id="participateInfo" style="justify-content: center;">University students specializing in AI</p>
-						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members</p>
+						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
 					<div class="col-2" style="margin-top: 56px">
 						<img src="../../static/app/imgs/Line.svg" style="height: 240px;">
@@ -181,6 +181,7 @@
 						<img src="../../static/app/imgs/flat.svg" id="eligibilityImage">
 						<h4 id="participateTitle">Startups</h4>
 						<p id="participateInfo" style="justify-content: center;">Startups less than 2 years old</p>
+						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
 				</div>
 			</div>
@@ -229,6 +230,29 @@
 		</div>
 	</div>
 
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<ul class="footer-link">
+						<li><a href="">Home</a></li>
+						<li><a href="">About Us</a></li>
+						<li><a href="">Contact Us</a></li>
+						<li><a href="">Know More</a></li>
+					</ul>
+				</div>
+				<div class="col-6">
+					<div class="follow">
+						<p>Follow Us On</p>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="row" id="footer-note">
+				<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+			</div>
+		</div>
+	</div>
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -272,7 +296,7 @@
 	});
 
 	typewriter.typeString('#AIforAutomotive')
-	    .pauseFor(2500)
+	    .pauseFor(2000)
 	    .deleteAll()
 	    .start();
 </script>
