--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -3,14 +3,11 @@
 <head>
 	<title>AIHackathon</title>
 	<meta charset="utf-8">
-
-	{% load static %}
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="{% static 'app/styles.css' %}">
+	<link rel="stylesheet" type="text/css" href="../../static/app/styles.css">
 	<!-- Noto Sans Font -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> 
 	<!-- PT Mono Font -->
@@ -19,15 +16,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet"> 
 	<!-- PT Sans Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet"> 
-
+	<!-- Oxygen Mono Font -->
+	<link href="https://fonts.googleapis.com/css?family=Oxygen+Mono&display=swap" rel="stylesheet">
+	<!-- Overpass Mono Font -->
+	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-	<div class="section-blue">
-		<!-- NAVBAR -->
-		<nav class="navbar navbar-expand-lg navbar-bg-custom">
-		  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+	<!-- NAVBAR -->
+	<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
+		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
 		        <a class="nav-link" id="link-color" href="#">Home</a>
@@ -42,14 +40,39 @@
 		        <a class="nav-link" id="link-color" href="#">Know More</a>
 		      </li>
 		    </ul>
-		  </div>
-		</nav>		
+		</div>
+	</nav>		
 
+	<div class="section-blue">
 		<!-- JUMBOTRON -->
 		<div class="jumbotron jumbotron-fluid">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
-					<div class="col-6"></div>
+					<div class="col-6" style="padding-left: 62px;">
+						<h1 id="hackathonTitle">AI HACKATHON</h1>
+						<div id="app">
+							<!-- <h4 id="hackathonTag">#AIforAutomotive</h4>							 -->
+						</div>
+
+						<div>
+							<div id="cohost">
+								CO-HOSTED BY
+							</div>
+							<div style="display: flex;">
+								<div style="margin-right: 20px; margin-top: 0px;">
+									<img src="../../static/app/imgs/logo-3.png" height="100px">
+								</div>
+								<div style="margin-top: 0px;">
+									<img src="../../static/app/imgs/TataLogoWhite.png" style="margin-right: 25px;">
+								</div>
+								<div style="margin-top: 15px;">
+									<img src="../../static/app/imgs/TataMotorsLogoWhite.png" style="margin-right: 25px;">
+								</div>
+							</div>	
+							<a href="registration.html" class="registerBtn">Register Now</a>
+						</div>
+
+					</div>
 					<div class="col-6 img-div">
 						<img src="../../static/app/imgs/LaptopLanding.svg">
 					</div>
@@ -60,8 +83,7 @@
 		<!-- COUNTDOWN TIMER -->
 		<div class="registration-box">
 			<h1 id="registration-title">Registrations close</h1>
-			<div id="clock">
-			</div>
+			<div id="clock"></div>
 		</div>
 	</div>
 
@@ -113,7 +135,7 @@
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
 						<div class="card custom-card" style="height: 400px">
 						  <div class="card-body">
-						    <img src="../../static/app/imgs/idea.svg" id="participateImage">
+						    <img src="../../static/app/imgs/symbiosislogo.png" id="participateImage">
 						    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
 						  </div>
 						</div>
@@ -121,7 +143,7 @@
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
 						<div class="card custom-card" style="height: 400px">
 						  <div class="card-body">
-						  	<img src="../../static/app/imgs/TataLogo.svg" id="organizerImage">
+						  	<img src="../../static/app/imgs/TataLogo.png" id="organizerImage">
 						    <p class="card-text" id="card-text-info">India's only value based corporation — a visionary, a pioneer, a leader, since 1868. Scroll below to learn more about us.</p>
 						  </div>
 						</div>
@@ -129,7 +151,7 @@
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
 						<div class="card custom-card" style="height: 400px">
 						  <div class="card-body">
-						  	<img src="../../static/app/imgs/TataMotorsLogo.svg" id="organizerImage">
+						  	<img src="../../static/app/imgs/TataMotorsLogo.png" id="organizerImage">
 						    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. </p>
 						  </div>
 						</div>
@@ -145,18 +167,21 @@
 		</div>
 		<div class="page-info">
 			<div class="container" style="margin-top: 15px;">
-				<div class="row text-center">
-					<div class="col-5">
+				<div class="row text-center justify-content-center">
+					<div class="col-4">
+						<img src="../../static/app/imgs/teamwork.svg" id="eligibilityImage">
 						<h4 id="participateTitle">Individuals</h4>
 						<p id="participateInfo" style="justify-content: center;">University students specializing in AI</p>
-						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members</p>
+						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
 					<div class="col-2" style="margin-top: 56px">
 						<img src="../../static/app/imgs/Line.svg" style="height: 240px;">
 					</div>
-					<div class="col-5">
+					<div class="col-4">
+						<img src="../../static/app/imgs/flat.svg" id="eligibilityImage">
 						<h4 id="participateTitle">Startups</h4>
 						<p id="participateInfo" style="justify-content: center;">Startups less than 2 years old</p>
+						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
 				</div>
 			</div>
@@ -171,20 +196,63 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<!-- <div style=" background-image: url('DrKetan.png');"></div> -->
-						<img src="../../static/app/imgs/DrKetan.png">
+						<div class="judgesImage" style="position: relative;">
+							<div class="judgeGradient">
+								<div class="judgeInfoBox">
+									<p class="judgeInfo">Dr Ketan Kotecha</p>
+									<p class="judgeInfoDesignation">Director, SIT</p>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<img src="../../static/app/imgs/DrKetan.png">
+						<div class="judgesImage" style="position: relative;">
+							<div class="judgeGradient">
+								<div class="judgeInfoBox">
+									<p class="judgeInfo">Arati Desai</p>
+									<p class="judgeInfoDesignation">Director, SIT</p>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
-						<img src="../../static/app/imgs/DrKetan.png">
+						<div class="judgesImage" style="position: relative;">
+							<div class="judgeGradient">
+								<div class="judgeInfoBox">
+									<p class="judgeInfo">Dr Chatterjee</p>
+									<p class="judgeInfoDesignation">Director, SIT</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-6">
+					<ul class="footer-link">
+						<li><a href="">Home</a></li>
+						<li><a href="">About Us</a></li>
+						<li><a href="">Contact Us</a></li>
+						<li><a href="">Know More</a></li>
+					</ul>
+				</div>
+				<div class="col-6">
+					<div class="follow">
+						<p>Follow Us On</p>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="row" id="footer-note">
+				<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+			</div>
+		</div>
+	</div>
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -196,7 +264,7 @@
 		crossorigin="anonymous"></script>
 
 <!-- COUNTDOWN JS -->
-<script type="text/javascript" src="js/countdown.js"></script>
+<script type="text/javascript" src="../../static/app/js/countdown.js"></script>
 <script type="text/javascript">
 	$('#clock').countdown('2019/8/15', function(event) {
   	var $this = $(this).html(event.strftime(''
@@ -207,6 +275,31 @@
 });
 </script>
 
+<!-- NAVBAR SCROLL SCRIPT -->
+<script type="text/javascript">
+		$(function(){
+			$(document).scroll(function(){
+				var $nav = $(".navbar");
+				var $link = $(".nav-link");
+				$nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+				$link.toggleClass("colorChange", $(this).scrollTop() > $nav.height());
+			})
+		})
+</script>
+
+<!-- TYPEWRITER JS -->
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+<script type="text/javascript">
+	var app = document.getElementById('app');
+	var typewriter = new Typewriter(app, {
+	    loop: true
+	});
+
+	typewriter.typeString('#AIforAutomotive')
+	    .pauseFor(2000)
+	    .deleteAll()
+	    .start();
+</script>
 
 </body>
 </html>
