Created new Final

--- a/hackathon/app/static/app/styles.css
+++ b/hackathon/app/static/app/styles.css
@@ -66,7 +66,7 @@ a:hover{
 
 .jumbotron{
 	background: transparent;
-	margin-bottom: 70px;
+	margin-bottom: 20px;
 }
 
 .img-div img{
@@ -121,6 +121,7 @@ a:hover{
 	text-align: center;
 	color: #FFFFFF;
 	margin-top: 50px;
+	text-transform: uppercase;
 }
 
 .registerBtn{
@@ -129,26 +130,29 @@ a:hover{
   	color: white;
   	padding: 15px 32px;
   	text-decoration: none;
-  	margin-top: 50px;
+  	margin-top: 20px;
   	cursor: pointer;
-  	width: 471px;
-	height: 88px;
+  	width: 400px;
+	height: 70px;
 	font-family: Oxygen Mono;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 28px;
+	font-size: 19px;
 	line-height: 37px;
 	display: flex;
 	align-items: center;
 	text-align: center;
 	justify-content: center;
 	text-transform: uppercase;
+    box-shadow: 16px 16px 4px 0px #0b024d;
 }
 
 .registerBtn:hover{
 	text-decoration: none;
 	color: #FFF;
-	background-color: #FF3400
+	background-color: #FF3400;
+	transform: translate(8px, 8px);
+	box-shadow: 8px 8px 4px 0px #0b024d;
 }
 
 .registration-box{
@@ -220,7 +224,7 @@ a:hover{
 	line-height: 40px;
 	display: flex;
 	align-items: center;
-	text-align: justify;
+	text-align: start;
 }
 
 .blue-box{
@@ -250,8 +254,9 @@ a:hover{
 	font-style: normal;
 	font-weight: normal;
 	font-size: 38px;
-	line-height: 74px;
+	line-height: 50px;
 	text-align: center;
+	height: 100px;
  }
 
 #participateInfo{
@@ -292,8 +297,43 @@ a:hover{
 	color: #000000;
  }
 
- .judgesImage{
+ #ketanImage{
  	background-image: url("../../static/app/imgs/DrKetan.png");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: ;
+ }
+
+ #pradeepImage{
+ 	background-image: url("../../static/app/imgs/Pradeep2.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #sureshImage{
+ 	background-image: url("../../static/app/imgs/psuresh.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #balajiImage{
+ 	background-image: url("../../static/app/imgs/pBbalaji.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #aasifImage{
+ 	background-image: url("../../static/app/imgs/DrKetan.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #aratiImage{
+ 	background-image: url("../../static/app/imgs/arati.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
@@ -307,7 +347,7 @@ a:hover{
 .judgeInfoBox{
 	position: absolute;
 	bottom: 0;
-	padding-left: 20px;
+	padding-left: 12px;
 	padding-bottom: 10px;
 }
 
@@ -322,8 +362,9 @@ a:hover{
  	color: #FFF;
  	justify-content: start;
  	margin-bottom: 0;
+ 	margin-right: 10px;
  	line-height: 30px !important;
- 	font-size: 20px !important;
+ 	font-size: 16px !important;
  }
 
  #event-registration-title{
@@ -440,6 +481,7 @@ textarea{
 	padding: 10px;
 	margin-bottom: 0;
 	margin-top: 10px;
+	padding-left: 0;
 }
 
 .footer-link li{
@@ -468,6 +510,11 @@ textarea{
 	color: #FFF;
 }
 
+#footer-note{
+	justify-content: center;
+	margin-top: 30px;
+}
+
 .follow p{
 	margin-top: 10px;
 	font-family: 'Noto Sans', sans-serif;
@@ -482,7 +529,83 @@ hr{
 	background: #FFF;
 }
 
-#footer-note{
+.support{
+	padding: 10px;
+	color: #FFF;
+}
+
+/*.support p{
+	margin-top: 10px;
+	margin-bottom: 0px;
+	font-family: 'Noto Sans', sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 15px;
+	line-height: 33px;
+	font-variant: small-caps;
+}*/
+
+#code{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	font-variant: none;
+	color: #FFF;
+}
+
+#code a{
+	color: #FFF;
+	opacity: 0.65;
+}
+
+#code a:hover{
+	opacity: 1;
+}
+
+.links{
+	padding: 10px;
+	color: #FFF;
+}
+
+.links p{
+	margin-top: 10px;
+	margin-bottom: 0px;
+	font-family: 'Noto Sans', sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 15px;
+	line-height: 33px;
+	font-variant: small-caps;
+}
+
+#privacy{
+	color: #FFF;
+	opacity: 0.65;
+}
+
+#privacy:hover{
+	opacity: 1;
+}
+
+.accordion i{
+	margin-right: 10px;
+}
+
+.card-header{
+	cursor: pointer;
+}
+
+#privacy-title{
+ 	font-family: 'Open Sans', sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 40px;
+	line-height: 74px;
+	display: flex;
 	justify-content: center;
-	margin-top: 30px;
+	text-align: center;
+	letter-spacing: 0.055em;
+	text-transform: uppercase;
+	font-variant: small-caps;
+	color: #000000;
+	margin-bottom: 0;
 }
