--- a/hackathon/app/templates/app/startupregistration.html
+++ b/hackathon/app/templates/app/startupregistration.html
@@ -62,19 +62,19 @@
 		<form>
 			<h4 class="form-title">Startup Details</h3>
 			<div class="form-group">
-			    <input type="text" class="form-control" id="startupName" placeholder="Startup Name">
+			    <input type="text" class="form-control" id="startupName" placeholder="Startup Name" required="true">
 			</div>
 			<div class="form-group">
-			    <input type="email" class="form-control" id="startupEmail" placeholder="Startup Email">
+			    <input type="email" class="form-control" id="startupEmail" placeholder="Startup Email" required="true">
 			</div>
 			<div class="form-group">
-		    	<input type="date" class="form-control" id="startupDate" placeholder="Date of Startup Registration">
+		    	<input type="date" class="form-control" id="startupDate" placeholder="Date of Startup Registration" required="true">
 		 	</div>
 		 	<div class="form-group">
-		    	<input type="text" class="form-control" id="startupProduct" placeholder="Technology Domain">
+		    	<input type="text" class="form-control" id="startupProduct" placeholder="Technology Domain" required="true">
 		  	</div>
 			<div class="form-group">
-			    <textarea class="form-control" id="startupDescription" placeholder="Startup Description"></textarea>
+			    <textarea class="form-control" id="startupDescription" placeholder="Startup Description" required="true"></textarea>
 			</div>
 		
 			<h4 class="form-title">Team Details</h3>
@@ -107,23 +107,23 @@
 						<form>
 							<h4 class="form-title">Personal Details</h4>
 							<div class="form-group">
-							    <input type="text" class="form-control" id="firstName" placeholder="First Name">
+							    <input type="text" class="form-control" id="firstName" placeholder="First Name" required="true">
 							</div>
 							<div class="form-group">
-							    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+							    <input type="text" class="form-control" id="lastName" placeholder="Last Name" required="true">
 							</div>
 							<div class="form-group">
-						    	<input type="date" class="form-control" id="dateOfBirth" placeholder="Date of Birth">
+						    	<input type="date" class="form-control" id="dateOfBirth" placeholder="Date of Birth" required="true">
 						 	</div>
 							<div class="form-group">
-							    <input type="email" class="form-control" id="personalEmail" placeholder="Personal Email">
+							    <input type="email" class="form-control" id="personalEmail" placeholder="Personal Email" required="true">
 							</div>
 							<div class="form-group">
-							    <input type="text" class="form-control" id="personalPhone" placeholder="Mobile Number">
+							    <input type="text" class="form-control" id="personalPhone" placeholder="Mobile Number" required="true">
 							</div>
 							
 							<div class="form-group">
-								<select class="custom-select" id="citySelect">
+								<select class="custom-select" id="citySelect" required="true">
 								  <option selected>City</option>
 								  <option value="1">One</option>
 								  <option value="2">Two</option>
@@ -132,7 +132,7 @@
 							</div>
 
 							<div class="form-group">
-								<select class="custom-select" id="stateSelect">
+								<select class="custom-select" id="stateSelect" required="true">
 								  <option selected>State</option>
 								  <option value="1">One</option>
 								  <option value="2">Two</option>
