--- a/hackathon/app/templates/app/landing.html
+++ b/hackathon/app/templates/app/landing.html
@@ -47,9 +47,6 @@
 		      <li class="nav-item nav-item-link">
 		        <a class="nav-link" id="link-color" href="#">Contact Us</a>
 		      </li>
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="#">Know More</a>
-		      </li>
 		    </ul>
 		</div>
 	</nav>		
@@ -57,7 +54,7 @@
 	<div class="section-blue">
 		<!-- JUMBOTRON -->
 		<div class="jumbotron jumbotron-fluid" style="padding-top: 30px;">
-			<div class="container-fluid">
+			<div class="container-fluid" style="margin-bottom: 50px;">
 				<div class="row">
 					<div class="col-6" style="padding-left: 62px;">
 						<h1 id="hackathonTitle">AI HACKATHON</h1>
@@ -67,9 +64,9 @@
 
 						<div>
 							<div id="cohost">
-								Organized Jointly By
+								An initiative by Tata Motors and Symbiosis Center for Applied Artificial Intelligence, a constituent of Symbiosis Institute of Technology
 							</div>
-							<div style="display: flex; margin-top: 10px;">
+							<<!-- div style="display: flex; margin-top: 10px;">
 								<div style="margin-top: 15px;">
 									<a href="https://www.tatamotors.com/">
 										<img src="../../static/app/imgs/TataMotorsLogoWhite.png" style="margin-right: 25px;">
@@ -95,8 +92,7 @@
 										<img src="../../static/app/imgs/SIT_Logo_new.png" style="margin-right: 25px; height: 100px;">
 									</a>
 								</div>
-							</div>
-
+							</div> -->
 							<a href="registration.html" class="registerBtn">Register Now (It's Free)</a>
 						</div>
 
@@ -121,7 +117,7 @@
 		</div>
 		<div class="page-info">
 			<div class="container">
-				<p>AI Hackathon is a joint collaboration between Tata Motors Global Delivery Centre and Symbiosis Institute of Technology to nurture young minds in industry applications. First of its kind in the industry where we are looking for innovation in AI and NLP ( Voice sentiment analysis) in English and Hindi.</p>
+				<p>AI Hackathon is a joint collaboration between Tata Motors Global Delivery Centre and Symbiosis Institute of Technology to nurture young minds in industry applications. First of its kind in the industry where we are looking for innovation in AI and NLP ( voice sentiment analysis) in English and Hindi.</p>
 				<p>AI Hackathon will be held in two rounds. The first round will be an online round where the problem statement will be shared over email the day Round 01 begins around mid August. Post evaluation, once shortlisted for Round 02, selected teams are requested to come over to SIT Pune campus for a 72 hour hackathon scheduled during the end of September. Details will be shared over email. So hurry up and register now !</p>
 			</div>
 		</div>
@@ -169,32 +165,42 @@
 			<h3>Hackathon Organizers</h3>
 		</div>
 		<div class="page-info">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
+			<div class="container-fluid">
+				<div class="row justify-content-center">
+					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.tata.com/">
-							<div class="card custom-card" style="height: 400px">
+							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="../../static/app/imgs/Tata_Logo2.svg" id="organizerImage">
+							  	<img src="../../static/app/imgs/Tata_Logo2.svg" id="organizerImage" style="margin-left: 100px;">
 							    <p class="card-text" id="card-text-info"> Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 							  </div>
 							</div>
 						</a>
 					</div>
-					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.tatamotors.com/">
-						<div class="card custom-card" style="height: 400px">
+						<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="../../static/app/imgs/TataMotorsLogo.png" id="organizerImage">
-							    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. </p>
+							  	<img src="../../static/app/imgs/TataMotorsLogo.png" id="organizerImage" style="margin-left: 25px;">
+							    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
 							    <img src="../../static/app/imgs/digital_exp.png" style="height: 80px; position: absolute; bottom: 0; right: 0;">
 							  </div>
 							</div>
 						</a>
 					</div>
-					<div class="col-4" style="padding-right: 20px; padding-left: 20px">
+					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
 						<a href="https://www.sitpune.edu.in/">
-							<div class="card custom-card" style="height: 400px">
+							<div class="card custom-card" style="height: 440px">
+							  <div class="card-body">
+							    <img src="../../static/app/imgs/SIT_Logo_new.png" id="participateImage">
+							    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
+							  </div>
+							</div>
+						</a>
+					</div>
+					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
+						<a href="https://www.sitpune.edu.in/">
+							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
 							    <img src="../../static/app/imgs/symbiosislogo.png" id="participateImage">
 							    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
@@ -256,7 +262,7 @@
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Pradeep Chatterjee</p>
-									<p class="judgeInfoDesignation">Head , Digital Transformation, Change Management and Customer Experience</p>
+									<p class="judgeInfoDesignation">Head , Digital Tower, Global Delivery Centre</p>
 								</div>
 							</div>
 						</div>
@@ -266,7 +272,7 @@
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Suresh P</p>
-									<p class="judgeInfoDesignation">Technology Leader, Process Transformation, Digital Tower</p>
+									<p class="judgeInfoDesignation">Technology Leader, Digital Tower, Global Delivery Centre</p>
 								</div>
 							</div>
 						</div>
@@ -461,7 +467,7 @@
 			                </div>
 			                <div id="questionOne" class="collapse" aria-labelledby="headingOne" data-parent="#question" style="">
 			                  <div class="card-body">
-			                   Current students of any college of India as well as working professionals.
+			                   Students of any college of India as well as startups less than two years old can attend.
 			                  </div>
 			                </div>
 			              </div>
@@ -473,7 +479,7 @@
 			                </div>
 			                <div id="questionTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#question" style="">
 			                  <div class="card-body">
-			                    A team should contain 3-4 members. Individuals can also register in the hackathon but however they won’t be allowed to participate individually. Selected individuals would be invited to the Round 2 at SIT (Symbiosis Institute of Technology), Pune.
+			                    A team should contain 2-4 members including mentor. Selected teams would be invited to the Round 2 at SIT (Symbiosis Institute of Technology), Pune.
 			                  </div>
 			                </div>
 			              </div>
@@ -481,12 +487,12 @@
 			                <div class="card-header card-header-bg" id="headingThree">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionThree" aria-expanded="false" aria-controls="questionThree">
 			                    <i class="lni-pencil"></i>  
-									Are you providing travel reimbursements?
+									Will there be travel reimbursements?
 			                  </div>
 			                </div>
 			                <div id="questionThree" class="collapse" aria-labelledby="headingThree" data-parent="#question">
 			                  <div class="card-body">
-			                    Unfortunately, we are not able to provide travel reimbursements.
+			                    Travel expenses are to be borne by the teams.
 			                  </div>
 			                </div>
 			              </div>
@@ -497,12 +503,12 @@
 			              <div class="card">
 			                <div class="card-header card-header-bg" id="headingFour">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionFour" aria-expanded="true" aria-controls="questionFour">
-			                   <i class="lni-pencil"></i> How much does it cost?
+			                   <i class="lni-pencil"></i> How much does it cost to register?
 			                  </div>
 			                </div>
 			                <div id="questionFour" class="collapse show" aria-labelledby="headingFour" data-parent="#question" style="">
 			                  <div class="card-body">
-			                    This event is completely free.
+			                    There is no registration fees.
 			                  </div>
 			                </div>
 			              </div>
@@ -515,36 +521,36 @@
 			                </div>
 			                <div id="questionOne2" class="collapse show" aria-labelledby="headingOne2" data-parent="#question" style="">
 			                  <div class="card-body">
-			                    You need to carry your College/Company ID Card, laptop, phone, chargers and any other necessary equipment.
+			                    You need to carry your college ID (for college students), hard copy of startup registration certificate (for startups), laptop, phone, chargers and any other necessary equipment.
 			                  </div>
 			                </div>
 			              </div>
 			              <div class="card">
 			                <div class="card-header card-header-bg" id="headingTwo2">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionTwo2" aria-expanded="true" aria-controls="collapseOne">
-			                    <i class="lni-pencil"></i> When will the applications close?
+			                    <i class="lni-pencil"></i> When will the registrations end?
 
 			                  </div>
 			                </div>
 			                <div id="questionTwo2" class="collapse show" aria-labelledby="headingTwo2" data-parent="#question" style="">
 			                  <div class="card-body">
-			                    The applications will close on 11:59 pm on 15th August 2019. We will select the applications after the registration closes and acceptance will be sent accordingly. 
+			                    The registrations will close on 11:59 pm on 9th August 2019. Shortlisted teams will be informed by August 16th through email.
 			                  </div>
 			                </div>
 			              </div>
-			              <!-- <div class="card">
+			              <div class="card">
 			                <div class="card-header" id="headingThree2">
 			                  <div class="header-title" data-toggle="collapse" data-target="#questionThree2" aria-expanded="true" aria-controls="collapseOne">
-			                    <i class="lni-pencil"></i> Will snacks/food be provided at the Hackathon?
+			                    <i class="lni-pencil"></i> Will accommadation and snacks/food be provided at the hackathon?
 
 			                  </div>
 			                </div>
 			                <div id="questionThree2" class="collapse show" aria-labelledby="headingThree2" data-parent="#question" style="">
 			                  <div class="card-body">
-			                    Although we won't provide food at the Hackathon, but there will be stalls around the venue where you could have a sumptuous meal!  
+			                     Accommodation and snacks/food will be provided by the SIT campus hostel.
 			                  </div>
 			                </div>
-			              </div>               -->
+			              </div>              
 			            </div>
 			          </div>
 			        </div>
@@ -558,17 +564,20 @@
 			<div class="row">
 				<div class="col-4">
 					<div class="follow">
-						<p>Code of conduct</p>
+						<p>Help Desk</p>
 						<p id="code">Still got some queries? Mail us at <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">aihackathon@sitpune.edu.in</a></p>						
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="follow text-center">
 						<p>Follow Us On</p>
-						<img src="../../static/app/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
+						<!-- <img src="../../static/app/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/app/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/app/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/app/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/app/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
+						<i class="lni-facebook" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-instagram" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-twitter" style="font-size: 25px; margin-right: 10px;"></i>
 					</div>
 				</div>
 				<div class="col-4">
@@ -578,7 +587,6 @@
 							<li><a href="">Home</a></li>
 							<li><a href="">About Us</a></li>
 							<li><a href="">Contact Us</a></li>
-							<li><a href="">Know More</a></li>
 						</ul>
 					</div>
 				</div>
@@ -607,7 +615,7 @@
 <!-- COUNTDOWN JS -->
 <script type="text/javascript" src="../../static/app/js/countdown.js"></script>
 <script type="text/javascript">
-	$('#clock').countdown('2019/8/15', function(event) {
+	$('#clock').countdown('2019/8/10', function(event) {
   	var $this = $(this).html(event.strftime(''
     + '<span>%D</span> days '
     + '<span>%H</span> hr '
