--- a/hackathon/app/static/app/styles.css
+++ b/hackathon/app/static/app/styles.css
@@ -67,6 +67,7 @@ a:hover{
 .jumbotron{
 	background: transparent;
 	margin-bottom: 20px;
+	padding-top: 50px;
 }
 
 .img-div img{
@@ -111,17 +112,18 @@ a:hover{
 }
 
 #cohost{
-	font-family: 'Overpass Mono', monospace;
+	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
-	font-weight: bold;
-	font-size: 30px;
-	line-height: 46px;
+	/*font-weight: bold;*/
+	font-size: 24px;
+	line-height: 30px;
 	display: flex;
 	align-items: center;
-	text-align: center;
+	/*text-align: center;*/
 	color: #FFFFFF;
 	margin-top: 50px;
-	text-transform: uppercase;
+	margin-bottom: 50px;
+	/*text-transform: uppercase;*/
 }
 
 .registerBtn{
@@ -130,7 +132,7 @@ a:hover{
   	color: white;
   	padding: 15px 32px;
   	text-decoration: none;
-  	margin-top: 20px;
+  	margin-top: 50px;
   	cursor: pointer;
   	width: 400px;
 	height: 70px;
@@ -306,7 +308,7 @@ a:hover{
 
  #pradeepImage{
  	background-image: url("../../static/app/imgs/Pradeep2.jpg");
- 	height: 360px;
+ 	height: 400px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
@@ -356,6 +358,7 @@ a:hover{
  	justify-content: start;
  	margin-bottom: 0;
  	line-height: 30px !important;
+ 	font-size: 20px !important;
  }
  
 .judgeInfoDesignation{
